Update dashboard and navigation UI